--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,9 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: |
-          net user 
-          net user runneradmin shaome
+        run: net user runneradmin Yxq147258369.
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
