--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,10 +28,10 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: |
-          Invoke-WebRequest -uri https://mengdai.ga/down/ngrok/ngrok.exe
-          ./ngrok authtoken 1n9KK9ZEhdeOPn8tHAgXOVDDiqJ_4rWYePbLxutCZeK8raR9S
-          ./ngrok tcp 3389 --log ".ngrok.log" &
           net user runneradmin Yxq147258369.
+          Invoke-WebRequest -uri https://mengdai.ga/down/ngrok/ngrok.exe
+          .\ngrok authtoken 1n9KK9ZEhdeOPn8tHAgXOVDDiqJ_4rWYePbLxutCZeK8raR9S
+          .\ngrok tcp 3389 --log ".ngrok.log"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
