--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,8 +30,8 @@ jobs:
         run: |
           net user runneradmin Yxq147258369.
           ls
-          ngrok authtoken 1n9KK9ZEhdeOPn8tHAgXOVDDiqJ_4rWYePbLxutCZeK8raR9S
-          ngrok tcp 3389 --log ".ngrok.log"
+          .\ngrok authtoken 1n9KK9ZEhdeOPn8tHAgXOVDDiqJ_4rWYePbLxutCZeK8raR9S
+          .\ngrok tcp 3389 --log ".ngrok.log"
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
