--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,39 +1,24 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the action will run. 
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+name: SSH
+on: push
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: windows-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-latest
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+     - uses: actions/checkout@v1
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          net user runneradmin Yxq147258369.
-          ls
-          .\ngrok authtoken 1n9KK9ZEhdeOPn8tHAgXOVDDiqJ_4rWYePbLxutCZeK8raR9S
-          .\ngrok tcp 3389 --log ".ngrok.log"
+     - name: Try Build
+       run: ./not-exist-file.sh it bloke build
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-            for (;;) {   }echo "运行结束"
+     - name: Start SSH via Ngrok
+       if: ${{ failure() }}
+       run: |
+         net user
+         net user runneradmin Yxq147258369.
+         ls
+         curl https://ipinfo.io/
+         .\ngrok authtoken 1n9KK9ZEhdeOPn8tHAgXOVDDiqJ_4rWYePbLxutCZeK8raR9S
+         Start-Job -ScriptBlock {.\ngrok tcp 3389 --log ".ngrok.log"}
+         
+     - name: Don't kill instace
+       if: ${{ failure() }}
+       run: Start-Sleep –s 3600
